--- a/A-list/A-list/View/Base.lproj/Main.storyboard
+++ b/A-list/A-list/View/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--A-list-->
+        <!--"category title"-->
         <scene sceneID="smh-sm-mbH">
             <objects>
                 <tableViewController id="duf-mX-fgJ" customClass="ListViewController" customModule="A_list" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,9 +15,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="kf5-m9-7zQ">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="duf-mX-fgJ" id="xsB-3U-SLJ"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListItemCell" id="BDh-Mw-0bD">
-                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <rect key="frame" x="0.0" y="94" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BDh-Mw-0bD" id="zlJ-c2-Ktc">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
@@ -30,7 +38,7 @@
                             <outlet property="delegate" destination="duf-mX-fgJ" id="odc-o4-3DO"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="A-list" id="An0-7N-Df3">
+                    <navigationItem key="navigationItem" title="&quot;category title&quot;" id="An0-7N-Df3">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="as3-Go-yS6">
                             <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -41,7 +49,46 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3fO-qr-HCg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1715.2671755725189" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="2753" y="4"/>
+        </scene>
+        <!--A-list-->
+        <scene sceneID="O8l-fL-iVH">
+            <objects>
+                <tableViewController id="rIe-QY-Wim" customClass="CategoryTableViewController" customModule="A_list" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="3Sz-YE-NSt">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="JBP-ko-vua" customClass="SwipeTableViewCell" customModule="SwipeCellKit">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JBP-ko-vua" id="0OK-mE-W4t">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="rIe-QY-Wim" id="u9S-l0-Tci"/>
+                            <outlet property="delegate" destination="rIe-QY-Wim" id="dV8-xt-fpi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="A-list" id="bE2-ud-6FR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="JRb-5d-K9z">
+                            <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="rIe-QY-Wim" id="4hY-UG-0uT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="duf-mX-fgJ" kind="show" identifier="goToChildList" id="Mc1-t6-vDG"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zba-EN-7jf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1755" y="4"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jTf-T1-QJk">
@@ -60,7 +107,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="duf-mX-fgJ" kind="relationship" relationship="rootViewController" id="XBn-mS-IbC"/>
+                        <segue destination="rIe-QY-Wim" kind="relationship" relationship="rootViewController" id="KXh-Lo-3S6"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Qm-X7-Eo9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
